# py-sql-bencher

./: .gitignore  README.md  pyproject.toml
examples/: agg_group_by.sql  agg_group_by_mat.sql  agg_windows.sql  generate.sql  schema.sql
src/: py_sql_bencher.py
